syntax = "proto3"; // 协议版本

// 选项配置
option java_package = "org.learn.grpc.api";
option java_outer_classname = "RPCDateServiceApi";
option java_multiple_files = true;

// 定义包名
package org.learn.grpc.api;

// 服务接口.定义请求参数和相应结果
service RPCDateService {
  rpc getDate (RPCDateRequest) returns (RPCDateResponse) {
  }

  rpc getDateStream (RPCDateRequest) returns (stream RPCDateResponse){

  }

  rpc doubleStream (stream RPCDateRequest) returns (stream RPCDateResponse){

  }

  rpc stream2Data (stream RPCDateRequest) returns (stream RPCDateResponseList){

  }


}

// 定义请求体
message RPCDateRequest {
  string userName = 1;
}

// 定义相应内容
message RPCDateResponse {
  string serverDate = 1;
}
// 定义相应内容
message RPCDateResponseList {
  repeated RPCDateResponse rPCDateResponse = 1;
}
